trilium-util.k8s.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml -o trilium-util.k8s.yaml
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    io.kompose.service: server
  type: NodePort
status:
  loadBalancer: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f compose.yaml -o trilium-util.k8s.yaml
    kompose.service.type: nodeport
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f compose.yaml -o trilium-util.k8s.yaml
        kompose.service.type: nodeport
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/trilium-util-default: "true"
        io.kompose.service: server
    spec:
      containers:
        - env:
            - name: TRU_ETAPI_TOKEN
              value: v50VfWqE3bjU_nk+SUp8f5V8goQj+e5VbFxbA1Vc31EABo8wYKah8MOA=
            - name: TRU_PASSWORD
              value: test
            - name: TRU_PASSWORDLESS_VIEWING
              value: "false"
            - name: TRU_SERVER
              value: https://trilium.dax.gay
          image: itecx/trilium-util:latest
          name: server
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /exports
              name: server-claim0
      restartPolicy: Always
      volumes:
        - name: server-claim0
          persistentVolumeClaim:
            claimName: server-claim0
status: {}

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: trilium-util-default
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/trilium-util-default: "true"
  podSelector:
    matchLabels:
      io.kompose.network/trilium-util-default: "true"
